# SUCA-api

./: .dockerignore  .env.docker  .env.example  .env.template  .gitignore  DOCKER.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  WORKFLOW.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  root_fsrs.py  test_fsrs.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0dd1bcfb1198_convert_datetime_columns_to_timezone_.py  18d645d2d8b3_remove_lapses_column.py  1fdc68513499_add_deck_sharing_fields.py  212a837af98d_add_indexes_for_search_optimization.py  26bd700d10e2_add_fsrs_fields_to_flashcards.py  6931b55f_add_trigram_index_for_english_search.py  cad089e64ecc_remove_is_common_from_entry_table.py  dbe8725dca05_add_flashcard_tables.py
scripts/: README.md  create_sample_data.py  demo_fsrs.py  parse_jmdict.py  test_fsrs_integration.py
src/suca/: main.py
src/suca/api/: deps.py
src/suca/api/v1/: router.py
src/suca/api/v1/endpoints/: __init__.py  auth.py  flashcard.py  health.py  search.py  translate.py
src/suca/core/: auth.py  config.py  exceptions.py  middleware.py  validators.py
src/suca/db/: base.py  db.py  model.py
src/suca/models/: user.py
src/suca/schemas/: __init__.py  base.py  flashcard_schemas.py  health.py  search.py
src/suca/services/: __init__.py  base.py  flashcard_service.py  fsrs_service.py  search_service.py
src/suca/utils/: __init__.py  fsrs.py  logging.py  text.py
tests/: conftest.py  test_auth.py  test_csv_import_export.py  test_deck_sharing.py  test_flashcard.py  test_fsrs.py  test_health.py  test_search.py
