[project]
name = "suca-api"
version = "0.1.0"
description = "SUCA API"
authors = [
    {name = "SUCA Team"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "alembic (>=1.16.5,<2.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pylingva (>=0.1.2,<0.2.0)",
    "requests (>=2.32.5,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "passlib[bcrypt] (>=1.7.4)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "fsrs (>=6.3.0,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.13.3,<0.14.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "mypy (>=1.18.2,<2.0.0)"
]

[tool.ruff]
line-length = 100
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in argument defaults (FastAPI Depends pattern)
    "B904"    # Exception chaining (not always needed for simple re-raises)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov-report=term-missing"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict = true
pretty = true